force-app/main/default/objects/PF_TestCaseExecution__c/PF_TestCaseExecution__c.object-meta.xml
<CustomObject>
    <description>This is where project test case executions will be captured within the ProjectForce application.</description>
    <label>Test Case Execution</label>
    <nameField>
        <displayFormat>TCE-{00000}</displayFormat>
        <label>Test Case Execution #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Case Executions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>