force-app/main/default/objects/PF_TestCaseExecution__c/fields/PF_Date_of_Run__c.field-meta.xml
<CustomField>
    <fullName>PF_Date_of_Run__c</fullName>
    <inlineHelpText>Provide run date for this execution.</inlineHelpText>
    <label>Date of Run</label>
    <type>Date</type>
</CustomField>