force-app/main/default/objects/PF_TestCaseExecution__c/fields/PF_Run_Comments__c.field-meta.xml
<CustomField>
    <fullName>PF_Run_Comments__c</fullName>
    <inlineHelpText>Provide Execution comments</inlineHelpText>
    <label>Execution Comments</label>
    <type>TextArea</type>
</CustomField>