force-app/main/default/objects/PF_TestCaseExecution__c/fields/PF_Status__c.field-meta.xml
<CustomField>
    <fullName>PF_Status__c</fullName>
    <inlineHelpText>Select status of the Run (pass /fail)</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>