force-app/main/default/objects/PF_TestCaseExecution__c/fields/PF_Test_Case__c.field-meta.xml
<CustomField>
    <fullName>PF_Test_Case__c</fullName>
    <inlineHelpText>Provide Test case against which this execution is done.</inlineHelpText>
    <label>Test Case</label>
    <referenceTo>PF_TestCases__c</referenceTo>
    <relationshipLabel>Test Case Executions</relationshipLabel>
    <relationshipName>Test_Case_Executions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>