force-app/main/default/objects/PF_TestCaseExecution__c/fields/PF_Test_Execution_Type__c.field-meta.xml
<CustomField>
    <fullName>PF_Test_Execution_Type__c</fullName>
    <inlineHelpText>Select the Test execution Type.</inlineHelpText>
    <label>Test Execution Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unit</fullName>
            </value>
            <value>
                <fullName>SIT</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Prod</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>