force-app/main/default/objects/PF_TestCaseExecution__c/recordTypes/PF_Test_Case_Execution.recordType-meta.xml
<RecordType>
    <fullName>PF_Test_Case_Execution</fullName>
    <active>true</active>
    <description>Standard pForce record type.</description>
    <label>Test Case Execution</label>
</RecordType>